--- a/web/views/player.ejs
+++ b/web/views/player.ejs
@@ -138,7 +138,7 @@
     <div class="avatar-container">
       <img src="<%= player.avatar_url %>" alt="Avatar" class="avatar" onerror="this.src='https://placehold.co/120x120/e0e6f0/5f6c7b?text=Error';">
     </div>
-        <div class="content-block" style="text-align: center;">
+    <div class="content-block" style="text-align: center;">
       <strong><%= player.username %></strong>
     </div>
     <div class="content-block">
@@ -220,6 +220,7 @@
 </div>
 
 <script>
+    // Data passed from server (full sessions list)
     const allSessions = JSON.parse('<%- JSON.stringify(sessions || []) %>');
     const playerUsername = "<%= player.username %>";
     const playerRank = "<%= player.group_rank %>";
